# snackstack

./: .env.example  LICENSE  README.md  pyproject.toml
agents/: menu_agent.py  orchestrator.py  order_agent.py  prompts.py  synthesizer.py  utils.py
data/: menu.py  orders.py
scripts/: try_menu_agent.py  try_orchestrator.py  try_order_agent.py  try_synthesizer.py
snackstack/: config.py  graph.py  logger.py  main.py  state.py
tools/: menu_tools.py  order_tools.py  rag.py
voice/: recorder.py  speaker.py
