[project]
name = "snackstack"
version = "0.1.0"
description = "Agentic AI snack-ordering assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "langchain>=1.3.10",
    "langchain-chroma>=1.1.0",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.6",
    "numpy>=2.5.0",
    "python-dotenv>=1.2.2",
    "sounddevice>=0.5.5",
    "soundfile>=0.14.0",
]

[dependency-groups]
dev = []

[build-system]
requires= ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["snackstack"]

[project.scripts]
snackstack = "snackstack.main:main"
